RESET project